--- a/Admision-sim/src/app/components/admin/cursos/biologia/index-biologia/index-biologia.component.html
+++ b/Admision-sim/src/app/components/admin/cursos/biologia/index-biologia/index-biologia.component.html
@@ -74,7 +74,7 @@
                                                 aria-label="Close"></button>
                                         </div>
                                         <div class="modal-body">
-                                            Desea eliminar de forma permanente la preguna
+                                            Desea eliminar de forma permanente la pregunta
                                             <strong [innerHTML]="item.pregunta"></strong>?
                                         </div>
                                         <div class="modal-footer">
